--- a/pages/recitales.html
+++ b/pages/recitales.html
@@ -23,7 +23,7 @@
     </nav>
     <main>
         <h1 class="huno">Proximas funciones</h1>
-        <table id="table">
+        <table >
             <tr>
                 <th class="coluno">Nombre del recital</th>
                 <th class="coldos">Fecha</th>
