--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <div id="imgdos">
             <img src="./assets/imagenes/duki imgdos.jpg" alt="imgdos">
         </div>
-        <section class=" parrafos row">
-            <p id="parrafoindex" class="parrafos col-lg-6">
+        <section class=" parrafos ">
+            <p id="parrafoindex" class="parrafos ">
                 Mauro Ezequiel Lombardo Quiroga nació el 24 de junio de 1996 en Almagro, Buenos Aires, Argentina.
                 Es hijo de Sandra Quiroga Perez, una abogada, y Guillermo Lombardo Ninaquispe, un diseñador gráfico.
                 Posee ascendencia española e indígena por su madre e italiano y peruano por su padre. Tiene un hermano,
                 Nahuel, especializado en ingeniería de sonido, y una hermana menor, Candela.
                 Mauro se crio en La Paternal luego de que sus padres se divorciaran, y a pesar de haber concurrido a la
-                escuela, jamás acabó la secundaria.3
+                escuela, jamás acabó la secundaria.
                 Lombardo comentó acerca de esto: «Era otro nivel de desinterés ya. No conectaba con nadie». De pequeño
                 tuvo
                 fuertes influencias musicales por parte de sus padres y hermanos,
@@ -60,9 +60,6 @@
                 Sanz y Luis Miguel, y su hermano era fanático de Luis Alberto Spinetta y Charly García. Duki comentó que
                 su canción favorita era «Sin gamulán» de la banda Los
                 Abuelos de la Nada.
-            </p>
-            <p id="parrafoindex" class="parrafos col-lg-6">
-
                 Antes de descubrir el rap, Mauro era fanático del garage rock y su banda preferida era Linkin Park, por
                 lo
                 que su deseo de pequeño era formar un grupo de rock. Fue a través de
@@ -80,6 +77,7 @@
                 mundo de las batallas de rap, concursando en diferentes
                 competiciones de Buenos Aires.
             </p>
+            
         </section>
 
 
