--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="keywords" content="musica, cantantes, duki, sonido, conciertos, informacion, fotos, trap, reggaeton, biografia, rkt, canciones, albums, sencillos, fechas, horios, lugares, noticioas">
+
+    <meta name="description" content="Bienvenido a la mejor pagina web sobre Duki, el mejor cantante latinoamericano de trap del momento. 
+    podras econtrar cosas como: informacion de su vida, fotos, lugar y dia de sus conciertos, entre muchas otras cosas. disfruta!!">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +17,7 @@
 
 
     <link rel="stylesheet" href="./css/style.css">
-    <title>trabajo practico</title>
+    <title>duki es fantastico!, bienvenido a la pagian de los amantes del trap!!</title>
 
 </head>
 
@@ -32,7 +36,7 @@
 
 
 
-    <h1 class="huno">Duki</h1>
+    <h1 class="huno">duki</h1>
     <main>
 
 
