--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="keywords" content="musica, cantantes, duki, sonido, conciertos, informacion, fotos, trap, reggaeton, biografia, rkt, canciones, albums, sencillos, fechas, horios, lugares, noticioas">
+    <meta property="keywords" content="musica, cantantes, duki, sonido, conciertos, informacion, fotos, trap, reggaeton, biografia, rkt, canciones, albums, sencillos, fechas, horios, lugares, noticias">
 
     <meta name="description" content="Bienvenido a la mejor pagina web sobre Duki, el mejor cantante latinoamericano de trap del momento. 
     podras econtrar cosas como: informacion de su vida, fotos, lugar y dia de sus conciertos, entre muchas otras cosas. disfruta!!">
