--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <link rel="stylesheet" href="./css/style.css">
-    <title>duki es fantastico!, bienvenido a la pagian de los amantes del trap!!</title>
+    <title>web de Duki!, bienvenido a la pagian de los amantes del trap!!</title>
 
 </head>
 
