--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -28,7 +28,7 @@
     <main>
         <h1 class="huno">Fotos de duki</h1>
        
-        <h2 class="hdos" id="hdosgaleria">Actual</h2>
+        <h2 class="hdos" >Actual</h2>
         <div class="divgaleria">
              
 
