--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,7 +8,7 @@
     <meta property="keywords" content="musica, cantantes, duki, sonido, conciertos, informacion, fotos, trap, reggaeton, biografia, rkt, canciones, albums, sencillos, fechas, horios, lugares, noticias">
 
     <meta name="description" content="Bienvenido a la mejor pagina web sobre Duki, el mejor cantante latinoamericano de trap del momento. 
-    podras econtrar cosas como: informacion de su vida, fotos, lugar y dia de sus conciertos, entre muchas otras cosas. disfruta!!">
+    en esta seccion podras encontrar fotos de todo tipo, que describen a la perfeccion como es nuestro famoso cantante.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Fotos sobre la vida de Duki</title>
