--- a/pages/recitales.html
+++ b/pages/recitales.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="keywords" content="musica, cantantes, duki, sonido, conciertos, informacion, fotos, trap, reggaeton, biografia, rkt, canciones, albums, sencillos, fechas, horios, lugares, noticias">
 
-    <meta name="description" content="Bienvenido a la mejor pagina web sobre Duki, el mejor cantante latinoamericano de trap del momento. 
-    podras econtrar cosas como: informacion de su vida, fotos, lugar y dia de sus conciertos, entre muchas otras cosas. disfruta!!">
+    <meta name="description" content="Bienvenido a la mejor pagina web sobre Duki, el mejor cantante latinoamericano de trap del momento. en esta seccion
+    podras encontrar todos los horarios, lugares y fechas de los proximos conciertos de duko.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Fechas y horarios de todos los conciertos</title>
